--- a/app/globals.scss
+++ b/app/globals.scss
@@ -42,6 +42,11 @@ a {
 }
 
 .standard-button {
+  &.w-radius {
+    button {
+      border-radius: 30px !important;
+    }
+  }
   .ant-btn-primary {
     background: #00203f !important;
   }
